<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receipt_entry_name_label" />

    <EditText
        android:id="@+id/receipt_entry_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receipt_category_label" />

    <EditText
        android:id="@+id/receipt_entry_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receipt_price_label" />

    <EditText
        android:id="@+id/receipt_entry_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--
    We don't really need a button since
    users can just press the back button
    like in Criminal Intent.
    <Button
        android:id="@+id/receipt_entry_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save entry" />
     -->

    <!-- Image of receipt here? -->
    <ImageView
        android:id="@+id/receipt_entry_camera_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>